OH-848 - There is an alignment issue for 'Confirm' button during changing Plans at the customer lookup page for active users.

--- a/UI/static/_css/main.less
+++ b/UI/static/_css/main.less
@@ -6119,6 +6119,7 @@ input {
 				text-align: center;
 				@media (@screen-md-min) {
 					padding: 0;
+					min-width:10rem;
 				}
 			}
 		}
@@ -6164,7 +6165,7 @@ input {
 	width: 100%;
 	margin: 2vh auto;
 	max-width: 70rem;
-	padding: 1rem 2rem;
+	padding: 2rem;
 	max-height: 90vh;
 	overflow: auto;
 	background: #fff;
